[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdms-extraction"
version = "0.1.0"
license = { text = "All rights reserved" }
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]


[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "smoke: quick connectivity or smoke tests"
]